--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,13 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+cover.html
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
 # Go workspace file
 go.work
+
+# Husky
+node_modules
