--- a/package.json
+++ b/package.json
@@ -1,1 +1,16 @@
-{"devDependencies":{"husky":"^8.0.0"},"scripts":{"prepare":"husky install"}}
+{
+  "devDependencies": {
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "devmoji": "^2.3.0",
+    "husky": "^8.0.0"
+  },
+  "scripts": {
+    "prepare": "husky install"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
+}
