chore(git): 🔧 🙈 Add starq to .gitignore
- 🐛 don't ignore starq directory

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@
 *.so
 *.dylib
 
+# Ignore build output
+starq
+# But not any starq package
+!starq/
+
 # Test binary, built with `go test -c`
 *.test
 
