feat(cli): 💥 ✨ add support for config files with separate inputs
💥 Remove `-c` argument in favor of positional config files
🚸 Display help when no arguments provided
🏗️ Make code more testable by using interfaces for `Transformer` and
   `RunConfig`
   - Update runner.go to use new interfaces
   - Update tests to stub out new interfaces with in-memory versions
🎨 Rename `Config` to `TransformerConfig` for more descriptive names
✅ Add enough tests to raise test coverage
📝 Add documentation for every struct and interface

BREAKING CHANGE: Remove `-c` argument in favor of positional config files

--- a/internal/starq/fake/config/petstore-readonly.yaml
+++ b/internal/starq/fake/config/petstore-readonly.yaml
@@ -1,8 +1,11 @@
 ---
+input:
+  file: ../input/petstore-openapi.json
 rules:
   - name: Pick paths and schemas
     jq: |
       {
+        info: .info,
         paths: .paths | map_values({ get: .get }),
         components: .components.schemas
       }
