Move sample files and update embedded to use RelPath

--- a/sample/config/petstore-to-readonly-stdout.yaml
+++ b/sample/config/petstore-to-readonly-stdout.yaml
@@ -2,6 +2,7 @@
 input:
   file: ../input/petstore-openapi.json
 rules:
+  # output to stdout with only the info, paths (GET only), and components fields
   - name: Pick paths and schemas
     jq: |
       {
