feat(cli): ✨ support output to file
✨ Create output directory if not exists
🎨 Add `CONFIG`, `INPUT`, and `OUTPUT` (new) prefix to test files
✅ Convert `root_test.go` to use output files and standard go libraries
   to parse the JSON or YAML output (instead of fastjson / guccy yaml)

--- a/sample/config/petstore-json-to-readonly.yaml
+++ b/sample/config/petstore-json-to-readonly.yaml
@@ -1,6 +1,8 @@
 ---
 input:
   file: ../input/petstore-openapi.json
+output:
+  file: ../output/petstore-openapi-readonly.json
 rules:
   # output to stdout with only the info, paths (GET only), and components fields
   - name: Pick paths and schemas
